--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
   </head>
+
+  <h1>hola</h1>
+
   <body>
     <!-- header section starts -->
     <header class="header">
